--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OrgRestaurant">
         <activity
+            android:name="Menu.WineMenuActivity"
+            android:exported="false" />
+        <activity
+            android:name="Menu.FoodMenuActivity"
+            android:exported="false" />
+        <activity
+            android:name="Menu.DrinksMenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddMenuItemActivity"
             android:exported="false" />
         <activity
